feat: implement production-ready security hardening, caching, rate limiting, and deployment configs