@@ -87,12 +87,17 @@ public class SecurityConfig {
                 // Add JWT filter before UsernamePasswordAuthenticationFilter
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
                 
-                // Configure security headers
+                // Configure comprehensive security headers
                 .headers(headers -> headers
+                        // Prevent clickjacking attacks
                         .frameOptions(frameOptions -> frameOptions.deny())
+                        
+                        // Prevent MIME type sniffing
                         .contentTypeOptions(contentTypeOptions -> {})
+                        
+                        // Enable HSTS for HTTPS connections
                         .httpStrictTransportSecurity(hstsConfig -> hstsConfig
-                                .maxAgeInSeconds(31536000)
+                                .maxAgeInSeconds(31536000) // 1 year
                         )
                 );
 
@@ -100,7 +105,7 @@ public class SecurityConfig {
     }
 
     /**
-     * Configures CORS settings.
+     * Configures CORS settings with environment-specific origins.
      *
      * @return CorsConfigurationSource
      */
@@ -108,20 +113,43 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         
-        // Allow specific origins in production, all origins in development
-        configuration.setAllowedOriginPatterns(List.of("*"));
+        // Get allowed origins from environment or use default for development
+        String allowedOrigins = System.getenv("CORS_ALLOWED_ORIGINS");
+        if (allowedOrigins != null && !allowedOrigins.isEmpty()) {
+            // Production: use specific origins
+            configuration.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+        } else {
+            // Development: allow localhost origins
+            configuration.setAllowedOriginPatterns(Arrays.asList(
+                "http://localhost:*",
+                "https://localhost:*",
+                "http://127.0.0.1:*",
+                "https://127.0.0.1:*"
+            ));
+        }
         
-        // Allow common HTTP methods
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        // Allow specific HTTP methods only
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         
-        // Allow common headers
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        // Allow specific headers only
+        configuration.setAllowedHeaders(Arrays.asList(
+            "Authorization",
+            "Content-Type",
+            "Accept",
+            "Origin",
+            "X-Requested-With",
+            "Access-Control-Request-Method",
+            "Access-Control-Request-Headers"
+        ));
         
-        // Allow credentials
+        // Allow credentials for authentication
         configuration.setAllowCredentials(true);
         
-        // Expose Authorization header
-        configuration.setExposedHeaders(List.of("Authorization"));
+        // Expose necessary headers
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "X-Total-Count"));
+        
+        // Set max age for preflight requests
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
